--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
+<mat-toolbar color="primary" *ngIf="currentUser">
+    <mat-toolbar-row>
+      <div>
+        <a mat-button [routerLink]="'/dashboard'"> Dashboard </a>
+        <a mat-button [routerLink]="'/order'"> Create Order </a>  
+        <a mat-button (click)="logout()"> Logout </a>
+      </div>
+    </mat-toolbar-row>
+  </mat-toolbar>
 <router-outlet></router-outlet>
