rective form dded

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,8 @@
       <div>
         <a mat-button [routerLink]="'/dashboard'"> Dashboard </a>
         <a mat-button [routerLink]="'/order'"> Create Order </a>  
+        <a mat-button [routerLink]="'/registration'"> Registration </a>
+        <a mat-button [routerLink]="'/board'"> Board </a>  
         <a mat-button (click)="logout()"> Logout </a>
       </div>
     </mat-toolbar-row>
